# fast-registry-json

./: Cargo.toml
benches/: benchmark.rs  benchmark_tango.rs
fuzz/fuzz_targets/: packument_index.rs
src/: lib.rs  main.rs  simd.rs
src/simd/: aarch64.rs  fallback.rs  width_128.rs
