[package]
name = "fast-registry-json"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayref = "0.3.9"
bytemuck = { version = "1.22.0", features = [
  "aarch64_simd",
  "avx512_simd",
  "must_cast",
] }
rustc-hash = "2.1.1"
wide = "0.7.32"

[features]
default = ["simd"]
simd = []

[dev-dependencies]
deno_npm = "0.27.2"
deno_semver = "0.7.1"
divan = "0.1.17"
paste = "1.0.15"
pretty_assertions = "1.4.1"
serde = "1.0.219"
serde_json = "1.0.140"
tango-bench = "0.6.0"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "benchmark_tango"
harness = false

[profile.release]
# codegen-units = 1
# lto = true

[profile.release-with-debug]
inherits = "release"
debug = true
